2007/01/19 niteria
- Fixed Bug 1545851: Buggy code (ifpdf...) in templates
- Fixed Bug 1639785: Command "View Output" is always active
- Fixed Bug 1638562: Profile wizard does not recognize installed Miktex 2.5
- Fixed Bug 1584370: "Stop build" icon cannot be reset (1beta7.01)

2007/01/15 niteria
 - New property page for the editor - includes now the new feature for word wrapping.

2006/10/17 niteria
 - Recognizes \nobibliography{} now

2006/08/24 niteria
- Fixed Bug 1543877: Wrong Auto-Complete with \figure

2006/08/20 niteria
- Fixed Bug 1420318: Find whole words does not work properly
- Fixed Bug 1345980 (duplicate): 6.31 find whole word with 1...2 letters
- Fixed Bug 1543457: Crash on startup when restoring invalid last session
- Fixed Bug 1543480: Focus in combo box after choosing output profile

2006/08/11 svenwiegand
- Replaced 'enumeration' entry in package TeX.xml by 'enumerate' what is really
  meant.

2006/05/27 svenwiegand
- Updated version information
- Updated and changed links (using TeXnicCenter.org instead of ToolsCenter.org)
- Added commands of navigator context menu to customization dialog, so that 
  shortcuts can be assigned to those commands.

2006/03/28 owieland
- Fixed bug 1448263: mispelled code for greek letter O

2005/10/13 owieland
- Fixed bug 1325323: Minor english corrections
- Fixed bug 1314326: Edit -> Toogle Block Comment mispelled

2005/09/18 niteria
- Single Instance Option for ghostview, i.e., ghostview is started only once.

2005/07/03 niteria
- Implemented Feature 984843: Session should open files in the order as they appear
  Files are now restored in the order as shown by the document tabs.
  If document tabs are not shown, window cycling order is used as before.
- Faster redrawing of navigator views after parsing.

2005/06/30 niteria
- Added number of bibtex entries as annotation of a bibtex file
  in the structure view.

2005/06/25 niteria
- Added commands for activating the references and the parse view.